prod/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector: 
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: eu.gcr.io/surfschool-finder/client:36c8ca6a03a12e235de34e935cb91116a6045002
          ports:
            - containerPort: 10230
