prod/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec: 
  replicas: 2 
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: eu.gcr.io/surfschool-finder/server:8e2b83c4b544d135f2d6548c63410902c78fcd21
          ports:
            - containerPort: 8081
