prod/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
  annotations:
    cloud.google.com/backend-config: '{"ports": {"443":"server-backendconfig"}}'
    cloud.google.com/neg: '{"ingress": true}'

spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 8081
      targetPort: 8081
